<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/brRolar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:text="@string/roll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spDados"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spDados"
        android:layout_width="411dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brRolar"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/rGroup"
        android:layout_width="100dp"
        android:layout_height="144dp"
        app:layout_constraintBottom_toTopOf="@+id/spDados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <RadioButton
            android:id="@+id/RB01"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/dado1" />

        <RadioButton
            android:id="@+id/RB02"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/dado2" />

        <RadioButton
            android:id="@+id/RB03"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/dado3" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:text="@string/DRTitle"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>